[package]
name = "echo-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev"]
description = "My take on the echo command line utility, written in Rust"
readme = "README.md"
repository = "https://github.com/sentinel1909/crusty-rustacean-api"
license = "MIT"
keywords = ["echo, utility"]
categories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
